--- a/14-15/01/passport.html
+++ b/14-15/01/passport.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>passport</title>
+    <title>DOM_JS. Считываем информацию из DOM</title>
   </head>
   <body>
     <table
@@ -79,3 +79,4 @@
   </body>
   <script src="./clickforpassport.js"></script>
 </html>
+
