--- a/14-15/03/formula.html
+++ b/14-15/03/formula.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Решение алгоритмической задачи</title>
+</head>
+<body>
+    <p name="formulation">Даны вещественные положительные числа a, b, c, d. Может ли прямоугольник со сторонами a, b уместиться внутри прямоугольника со сторонами c, d так, чтобы каждая сторона внутреннего прямоугольника была
+параллельна или перпендикулярна стороне внешнего прямоугольника?</p>
+    <form action="https://www.bing.com/search?" id="UserEnter" name="UserEnter" target="_blank">
+        <ul>
+                
+            <li>a: <input id="a" name="a" type="number" step="any" value="5"></li>
+            <li>b: <input id="b" name="b" type="number" step="any" value="3"></li>
+            <li>c: <input id="c" name="c" type="number" step="any" value="6"></li>
+            <li>d: <input id="d" name="d" type="number" step="any" value="4"></li>
+            <li>Результат решения задачи: <input id="result" name="result" value="не определен"></li>
+            <li>проверить: <input id="verify" type="button" value="Проверить"></li>
+            <li>отправить форму: <input id="send" type="button" value="Отправить"></li>
+        </ul>
+    </form>
+</body>
+<script src="formula03.js"></script>
+</html>
