--- a/14-15/01/passport01.html
+++ b/14-15/01/passport01.html
@@ -8,7 +8,7 @@
   <body>
     <ul>
     <li><a href="https://erkhudadian.github.io/2025_BWT/14-15/01/passport01.html" target="_self"><b>01</b></a>
-    <li><a href="https://erkhudadian.github.io/2025_BWT/14-15/02/passport.html"></a>
+    <li><a href="https://erkhudadian.github.io/2025_BWT/14-15/02/passport.html"><b>02</b></a>
         <li><a href="C:\Users\elina\OneDrive\Рабочий стол\VSC\DOM_Screen\14-15\03\formula.html" target="_self">03</a>
         
 </ul>
