--- a/14-15/03/formula.html
+++ b/14-15/03/formula.html
@@ -7,9 +7,9 @@
 <body>
     
       <ul>
-    <li><a href="C:\Users\elina\OneDrive\Рабочий стол\VSC\DOM_Screen\14-15\01\passport01.html" target="_self">01</a>
-    <li><a href="C:\Users\elina\OneDrive\Рабочий стол\VSC\DOM_Screen\14-15\02\passport.html" target="_self">02</a>
-    <li><a href="C:\Users\elina\OneDrive\Рабочий стол\VSC\DOM_Screen\14-15\03\formula.html" target="_self"><b>03</b></a>
+      <li><a href="https://erkhudadian.github.io/2025_BWT/14-15/01/passport01.html" target="_self">01</a>
+    <li><a href="https://erkhudadian.github.io/2025_BWT/14-15/02/passport.html" target="_self">02</a>
+        <li><a href="https://erkhudadian.github.io/2025_BWT/14-15/03/formula.html" target="_self"><b>03</b></a>
         
 </ul>
 <form action="https://www.bing.com/search?" id="UserEnter" name="UserEnter" target="_blank">
