--- a/14-15/03/formula.html
+++ b/14-15/03/formula.html
@@ -7,10 +7,9 @@
 <body>
     
       <ul>
-      <li><a href="https://erkhudadian.github.io/2025_BWT/14-15/01/passport01.html" target="_self">01</a>
-    <li><a href="https://erkhudadian.github.io/2025_BWT/14-15/02/passport.html" target="_self">02</a>
-        <li><a href="https://erkhudadian.github.io/2025_BWT/14-15/03/formula.html" target="_self"><b>03</b></a>
-        
+ <li><a href="../01/passport01.html" target="_self">01</a></li>
+    <li><a href="../02/passport.html" target="_self">02</a></li>
+    <li><a href="formula.html" target="_self"><b>03</b></a></li>
 </ul>
 <form action="https://www.bing.com/search?" id="UserEnter" name="UserEnter" target="_blank">
         <ul>
