--- a/14-15/02/passport.html
+++ b/14-15/02/passport.html
@@ -56,7 +56,7 @@
 
       <tr>
         <td height="300px" align="left" valign="bottom" rowspan="7">
-          <img height="200px" src="./элечка.jpg" alt="" />
+          <img height="200px" src="элечка.jpg" alt="" />
         </td>
         <td height="100px" colspan="2">
           Фамилия: <span id="surname">Худадян</span>
