--- a/14-15/01/passport01.html
+++ b/14-15/01/passport01.html
@@ -56,7 +56,7 @@
 
       <tr>
         <td height="300px" align="left" valign="bottom" rowspan="7">
-          <img height="200px" src="C:\Users\elina\OneDrive\Рабочий стол\VSC\DOM_Screen\14-15\02\элечка.jpg" alt="" />
+          <img height="200px" src="../02/элечка.jpg" alt="" />
         </td>
         <td height="100px" colspan="2">
           Фамилия: <span id="surname">Худадян</span>
