--- a/my_site/mamma_lia.html
+++ b/my_site/mamma_lia.html
@@ -5,6 +5,7 @@
     <title>Мой сайт</title>
   </head>
   <body>
+    <a name="top"></a>
     <h1>Mamma Lia!</h1>
     <p id="company_name"></p>
      <a href="photo\cake_big.png" target="_blank">
@@ -227,6 +228,7 @@
    <section id="contacts"></section>
    <table>
     <tr align="center">
+      <a href="#top">Наверх</a>
       <h3>Контакты</h3>
     </tr>
     <td width="300"> <b>Номер телефона - </b><span id=phone> +7 999 444 33 22 </span></td>
@@ -236,3 +238,4 @@
    </table>
   </body>
 </html>
+
