--- a/my_site/mamma_lia.html
+++ b/my_site/mamma_lia.html
@@ -2,240 +2,126 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <title>Мой сайт</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Главная - Mamma Lia!</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link href="styles.css" rel="stylesheet">
   </head>
   <body>
-    <a name="top"></a>
-    <h1>Mamma Lia!</h1>
-    <p id="company_name"></p>
-     <a href="photo\cake_big.png" target="_blank">
-  <img src="photo\cake_mini.png" width="100" alt="Увеличить">
-</a>
-       <style>
-        .nav-active {
-            background-color: #6385e1;
-            font-weight: bold;
-            color: #000;
-            padding: 5px;
-            border-radius: 3px;
-        }
-        ul li a {
-            text-decoration: none;
-            color: #333;
-            padding: 5px;
-            display: block;
-        }
-        ul li a:hover {
-            background-color: #e0e0e0;
-        }
-    </style>
-      <h2>Навигация по сайту:</h2>
-      <ul>
-       <li><a href="mamma_lia.html" target="_self" class="nav-active">Главная</a></li>
-        <li><a href="#hits" target="_self">Хиты продаж</a></li>
-        <li><a href="catalog.html" target="_self">Каталог тортов</a></li>
-        <li><a href="order.html" target="_self">Заказ тортов</a></li>
-        <li><a href="#contacts" target="_self">Контакты</a></li>
-        <li>
-          <a href="https://artlunch.am/ru" target="_blank">Наши партнеры</a>
-        </li>
-      </ul>
-     <section id="hits">
-    <h3 align="center">Хиты продаж</h3>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand fw-bold" href="mamma_lia.html">Mamma Lia!</a>
+        <div class="navbar-nav">
+          <a class="nav-link nav-active" href="mamma_lia.html">Главная</a>
+          <a class="nav-link" href="#hits">Хиты продаж</a>
+          <a class="nav-link" href="catalog.html">Каталог</a>
+          <a class="nav-link" href="order.html">Заказ</a>
+                    <a class="nav-link" href="reviews.html">Отзывы</a>
+          <a class="nav-link" href="#contacts">Контакты</a>
+        </div>
+      </div>
+    </nav>
 
-    <table
-      align="center"
-      cellspacing="0"
-      cellpadding="10"
-      border="0"
-      width="700px"
-      background="photo\back.png"
-    >
-      <tr>
-        <td
-          colspan="3"
-          bgcolor="#3f729d"
-          background=photo\back.png
-          height="50px"
-        >
-          Шоколадный торт
-        </td>
-      </tr>
+    <div class="container mt-4">
+      <h1 class="text-center">Mamma Lia!</h1>
+      <p class="text-center text-muted">Вкус, который вы запомните навсегда</p>
+    </div>
 
-      <tr>
-        <td
-          bgcolor="#204085"
-          height="200px"
-          width="300px"
-          background="photo\back.png"
-        >
-          <img src="photo\chocko.png" width="250" />
-        </td>
+    <div id="hits" class="container mt-4">
+      <h2 class="text-center mb-4">Хиты продаж</h2>
 
-        <td>
-          Нежный бисквит с насыщенным вкусом какао, пропитанный сливочным
-          кремом. Настоящая классика для ценителей шоколада. Идеально для
-          праздника и чаепития.
-        </td>
-      </tr>
+      <div class="row">
+        <div class="col-md-6 col-lg-3 mb-4">
+          <div class="card h-100">
+            <img
+              src="photo/chocko.png"
+              class="card-img-top"
+              alt="Шоколадный торт"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Шоколадный торт</h5>
+              <p class="card-text">Нежный бисквит с насыщенным вкусом какао</p>
+              <p class="h5 text-primary">2000 руб./кг</p>
+              <a href="order.html" class="btn btn-primary">Заказать</a>
+            </div>
+          </div>
+        </div>
 
-      <tr>
-        <td align="center" valign="top" colspan="2" height="100px">
-          Цена: 2000 руб./кг <a href="order.html" style="display:inline-block; padding:10px 20px; background:#d2691e; color:white; text-decoration:none; border-radius:5px; margin-top:10px;">
-      Заказать
-    </a>
+        <div class="col-md-6 col-lg-3 mb-4">
+          <div class="card h-100">
+            <img src="photo/napoleon.png" class="card-img-top" alt="Наполеон" />
+            <div class="card-body">
+              <h5 class="card-title">Наполеон</h5>
+              <p class="card-text">Хрустящие слои и нежный заварной крем</p>
+              <p class="h5 text-primary">1900 руб./кг</p>
+              <a href="order.html" class="btn btn-primary">Заказать</a>
+            </div>
+          </div>
+        </div>
 
+        <div class="col-md-6 col-lg-3 mb-4">
+          <div class="card h-100">
+            <img src="photo/tiramisu.png" class="card-img-top" alt="Тирамису" />
+            <div class="card-body">
+              <h5 class="card-title">Тирамису</h5>
+              <p class="card-text">На основе сыра маскарпоне с кофе</p>
+              <p class="h5 text-primary">2200 руб./кг</p>
+              <a href="order.html" class="btn btn-primary">Заказать</a>
+            </div>
+          </div>
+        </div>
 
-        </td>
-      </tr>
-    </table>
-<br>
-    <table
-      align="center"
-      cellspacing="0"
-      cellpadding="10"
-      border="0"
-      width="700px"
-      background="photo\back.png"
-    >
-      <tr>
-        <td
-          colspan="3"
-          bgcolor="#3f729d"
-          background="photo\back.png"
-          height="50px"
-        >
-          Наполеон
-        </td>
-      </tr>
+        <div class="col-md-6 col-lg-3 mb-4">
+          <div class="card h-100">
+            <img
+              src="photo/red_velvet.png"
+              class="card-img-top"
+              alt="Красный бархат"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Красный бархат</h5>
+              <p class="card-text">Алые коржи с сырным кремом</p>
+              <p class="h5 text-primary">2100 руб./кг</p>
+              <a href="order.html" class="btn btn-primary">Заказать</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-      <tr>
-        <td
-          bgcolor="#204085"
-          height="200px"
-          width="300px"
-          background="photo\back.png"
-        >
-          <img src="photo\napoleon.png" width="250" />
-        </td>
+    <div id="contacts" class="bg-light mt-5 py-4">
+      <div class="container">
+        <h3 class="text-center">Контакты</h3>
+        <div class="row text-center">
+          <div class="col-md-6">
+            <p><strong>Телефон:</strong> +7 999 444 33 22</p>
+          </div>
+          <div class="col-md-6">
+            <p><strong>Email:</strong> mamma_lia@yandex.ru</p>
+          </div>
+          <div class="col-12 mt-3">
+            <p><strong>Наши партнеры:</strong></p>
+            <a href="https://artlunch.am/ru" target="_blank">
+              <img
+                src="photo/art_lunch.png"
+                alt="Art Lunch"
+                style="max-height: 100px"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
 
-        <td>
-          Хрустящие слои воздушного теста и нежный заварной крем. Тот самый
-          десерт из детства, который покоряет с первой вилки.
-        </td>
-      </tr>
+    <footer class="bg-dark text-white text-center py-3 mt-4">
+      <div class="container">
+        <p class="mb-0">2024 Mamma Lia! Кондитерская</p>
+      </div>
+    </footer>
 
-      <tr>
-        <td align="center" valign="top" colspan="2" height="100px">
-          Цена: 1900 руб./кг <a href="order.html" style="display:inline-block; padding:10px 20px; background:#d2691e; color:white; text-decoration:none; border-radius:5px; margin-top:10px;">
-      Заказать
-    </a>
-
-        </td>
-      </tr>
-    </table>
-<br>
-    <table
-      align="center"
-      cellspacing="0"
-      cellpadding="10"
-      border="0"
-      width="700px"
-      background="photo\back.png"
-    >
-      <tr>
-        <td
-          colspan="3"
-          bgcolor="#3f729d"
-          background="photo\back.png"
-          height="50px"
-        >
-          Тирамису
-        </td>
-      </tr>
-
-      <tr>
-        <td
-          bgcolor="#204085"
-          height="200px"
-          width="300px"
-          background="photo\back.png"
-        >
-          <img src="photo\tiramisu.png" width="250" />
-        </td>
-
-        <td>
-          Нежнейший десерт на основе сыра маскарпоне, пропитанный кофе и с
-          легкой ноткой ликёра. Тает во рту и дарит кофейное наслаждение.
-        </td>
-      </tr>
-
-      <tr>
-        <td align="center" valign="top" colspan="2" height="100px">
-          Цена: 2200 руб./кг <a href="order.html" style="display:inline-block; padding:10px 20px; background:#d2691e; color:white; text-decoration:none; border-radius:5px; margin-top:10px;">
-      Заказать
-    </a>
-
-        </td>
-      </tr>
-    </table>
-<br>
-    <table
-      align="center"
-      cellspacing="0"
-      cellpadding="10"
-      border="0"
-      width="700px"
-      background="photo\back.png"
-    >
-      <tr>
-        <td
-          colspan="3"
-          bgcolor="#3f729d"
-          background="photo\back.png"
-          height="50px"
-        >
-          Красный бархат
-        </td>
-      </tr>
-
-      <tr>
-        <td
-          bgcolor="#204085"
-          height="200px"
-          width="300px"
-          background="photo\back.png"
-        >
-          <img src="photo\red_velvet.png" width="250" />
-        </td>
-
-        <td>
-          Влажные алые коржи с ноткой какао и сливочный сырный крем. Яркий,
-          мягкий и с изысканным вкусом.
-        </td>
-      </tr>
-
-      <tr>
-        <td align="center" valign="top" colspan="2" height="100px">
-          Цена: 2100 руб./кг <a href="order.html" style="display:inline-block; padding:10px 20px; background:#d2691e; color:white; text-decoration:none; border-radius:5px; margin-top:10px;">
-      Заказать
-    </a>
-
-        </td>
-      </tr>
-    </table>
-<br>
-   <section id="contacts"></section>
-   <table>
-    <tr align="center">
-      <a href="#top">Наверх</a>
-      <h3>Контакты</h3>
-    </tr>
-    <td width="300"> <b>Номер телефона - </b><span id=phone> +7 999 444 33 22 </span></td>
-    <td><b> Email:</b> <span id=email> mamma_lia@yandex.ru</span></td>
-    <td> <a href="https://artlunch.am/ru" target="_blank"><img src="photo\art_lunch.png" height="300px" ></a></td>
-
-   </table>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
-
